<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">spotify streamer</string>
    <string name="super_duo_1">scores app</string>
    <string name="super_duo_2">library app</string>
    <string name="ant_terminator">build it bigger</string>
    <string name="materialize">bacon reader</string>
    <string name="capstone">capstone: my own app</string>
    <string name="launch_string_start">This button will launch my</string>
    <string name="launch_string_end">app!</string>
</resources>
